Update home page to improve and fix to make more simple and readable

--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
-.section {
+section {
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -47,7 +47,7 @@
     transition: 0.5s
 }
 
-.soicalIcon {
+.socialIcon {
     display: flex;
     align-items: center;
     margin-top: 20px;
@@ -55,19 +55,19 @@
 
 }
 
-.soicalIcon .sIcon {
+.socialIcon .sIcon {
     color: #00f4f8;
     font-size: 30px;
     margin-right: 40px;
 }
 
 
-.imgStyle{
+.imgBx{
     width: 60%;
     max-width: 80rem;
 }
 
-.men {
+.profileImg {
     position: relative;
     width: 100%;
     height: auto;
@@ -91,7 +91,7 @@
 
 @media screen and (max-width: 1200px) {
 
-    .section {
+    section {
         flex-direction: column;
 
         justify-content: flex-start;
@@ -110,7 +110,7 @@
    
     }
 
-    .men {
+    .profileImg {
         position: relative;
         top: 15%;
         right: 0%;
@@ -123,7 +123,7 @@
 
 @media screen and (max-width: 700px) {
 
-    .section {
+    section {
         flex-direction: column;
    
         justify-content: flex-start;
@@ -143,7 +143,7 @@
     }
 
 
-    .men {
+    .profileImg {
         position: relative;
         top: 10%;
         max-width: auto;
@@ -172,7 +172,7 @@
         padding: 0;
     }
 
-    .soicalIcon {
+    .socialIcon {
         display: none;
     }
 
